
Table display now uses the background color cyan for all cells containing new lines
  not only in SQL result tables and in Object tree "Content" tables.

Table cell data popup now offers find, Xml/Json-reformatting and export functions for all tables.
  To open the cell data popup double-click a table cell.

Bug fixes:

Find in preferences/configurations dialog:
  Double clicking any empty node now always shows the preference/configuration.

SQL result table: Section count, position and sum were updated at the end of a selection only,
  not as the used to be during the selection, too.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/42
  Refactoring "Add column" raised "IllegalArgumentException: SQLDatabaseMetaData == null."
  See table in Object tree --> right mouse click --> Refactoring --> Column --> Add Column

SQL result: When a SQL result was rerun, the SQL displayed on the result's info tab lost comments.

SQL editor/SQL result tabs, SQL result tab header marks:
  Marking only the last matching SQL result tab didn't work when a result tab was rerun.
  See menu File --> Global Preferences --> tab SQL --> section "SQL result tab header".

SQL editor/SQL result tabs, SQL result tab header marks,
  Menu File --> Global Preferences --> tab SQL --> section "SQL result tab header": checkboxes didn't work correctly.

Refactoring Plugin: When refactoring SQLs were chosen to be edited
  from within an Object tree besides an additional SQL editor the main SQL editor was activated
  instead of the additional editor.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/38
MSSQL Server, table scripting: datetime2 type was scripted as datetime.

MSSQL Server, table scripting: Replaced deprecated types text, image by varchar(max), and varbinary(max).

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/17
For databases which support catalogs and schemas, e.g. MSSQL Server, catalog nodes contained schemas